--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
+    "express": "^4.18.2",
+    "json-server": "^0.17.1",
+    "json-server-auth": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
