--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "semantic-ui-css": "^2.5.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
