Added global ResponseExceptionHandler. Added not-null constrictions.

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,3 +2,11 @@ spring.datasource:
   url: jdbc:postgresql://localhost:5432/bookstore
   username: postgres
   password: percia123
+  jpa:
+    hibernate:
+      ddl-auto: validate
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+    show-sql: true
