--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -33,11 +33,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.spockframework:spock-core:2.3-groovy-4.0'
+    testImplementation 'org.spockframework:spock-spring:2.4-M1-groovy-4.0'
     testImplementation 'org.mapstruct:mapstruct:1.5.3.Final'
-
+    testImplementation 'org.apache.groovy:groovy-json:4.0.9'
 }
 
-tasks.named('test') {
+test {
     useJUnitPlatform()
 }
