Created basic infrastructure related to book package.

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring.datasource:
-  url: jdbc:postgresql://localhost:5432/bookstore
+  url: jdbc:postgresql://localhost:5431/bookstore
   username: postgres
-  password: percia123
+  password: password
   jpa:
     hibernate:
       ddl-auto: validate
