--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.36.0",
+    "eslint-plugin-react": "^7.32.2",
     "json-server": "^0.17.2"
   }
 }
