--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.10",
     "express": "^4.18.2",
     "json-server-auth": "^2.1.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.194",
     "eslint": "^8.36.0",
     "eslint-plugin-react": "^7.32.2",
     "json-server": "^0.17.2"
