--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -4,10 +4,11 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.0'
     id 'groovy'
     id 'org.liquibase.gradle' version '2.0.4'
+    id "org.sonarqube" version "4.0.0.2929"
 }
 
 group = 'app'
-version = '0.0.1-SNAPSHOT'
+version = '1.0'
 sourceCompatibility = '17'
 
 configurations {
@@ -15,6 +16,8 @@ configurations {
         extendsFrom annotationProcessor
     }
 }
+
+jar.enabled = false
 
 repositories {
     mavenCentral()
