--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,27 +1,3 @@
-spring.datasource:
-  url: jdbc:postgresql://localhost:5431/bookstore
-  username: postgres
-  password: password
-  jpa:
-    hibernate:
-      ddl-auto: validate
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
-    show-sql: true
-
-
-
-#logging.level.org.springframework: TRACE
 spring:
-  jpa:
-    properties:
-      hibernate:
-        show_sql: true
-        format_sql: true
-logging:
-  level:
-    org:
-      hibernate:
-        type: trace
+  profiles:
+    active: dev
